--- a/example06-presentation/src/main/angular/src/styles.sass
+++ b/example06-presentation/src/main/angular/src/styles.sass
@@ -2,8 +2,55 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap"
 
+$bg-color: #333
+$text-color: #ccc
+
+$font-stack: Helvetica, sans-serif
+$primary-color: #000
+
 html
   font-size: .875rem
 
 body
   padding-bottom: 2rem
+  font: 100% $font-stack
+  background-color: $primary-color
+
+h5, h4, h3, h2, h1, .row
+  color: #FFF
+
+
+.title, .card, .container-fluid, .list-group
+  background: $bg-color
+  padding: .5rem .75rem
+  border-radius: .25rem
+  color: $text-color
+  font-size: 1rem
+
+.list-group-item
+  background: $bg-color
+  padding: .5rem .75rem
+  border-radius: .25rem
+  border-color: #FFF
+  color: $text-color
+  font-size: 1rem
+
+.list-group-item:first-child
+  background: lighten($bg-color, 40)
+  padding: .5rem .75rem
+  border-radius: .25rem
+  border-color: #FFF
+  color: #000
+  font-size: 1rem
+
+
+.rounded-3
+  background-color: #ccc
+
+.btn-outline-primary
+  border-color: #FFF
+  color: #FFF
+
+.form-control
+  background: lighten($bg-color, 40)
+  color: #000
