--- a/example06-presentation/src/main/angular/src/app/app.component.html
+++ b/example06-presentation/src/main/angular/src/app/app.component.html
@@ -19,6 +19,18 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/security" routerLinkActive="active">Security</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
+    </li>
   </ul>
 
   <!-- news area -->
