Removed generated components, added register comp.

--- a/example06-presentation/src/main/angular/src/app/auth/auth.component.html
+++ b/example06-presentation/src/main/angular/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!isLoggedIn">
-  <h4 class="title">Login</h4>
-  <hr>
   <div class="card">
+    <h4 class="title">Login</h4>
+    <hr>
     <div class="card-body">
       <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
@@ -18,6 +18,13 @@
       <wt2-login [authService]="authService" (loggedIn)="load()"></wt2-login>
     </div>
   </div>
+  <div class="card">
+    <h4 class="title">Register</h4>
+    <hr>
+    <div class="card-body">
+      <wt2-register></wt2-register>
+    </div>
+  </div> 
 </div>
 
 <div *ngIf="isLoggedIn">
