--- a/example06-presentation/src/main/angular/src/app/angular/create-news/create-news.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/create-news/create-news.component.html
@@ -1,9 +1,9 @@
 <div class="card">
   <div class="card-body">
 
-    <div class="alert alert-danger alert-dismissible" *ngIf="errorMessage != null">
+    <div class="alert alert-danger alert-dismissible" *ngIf="errorMessage !== ''">
       {{errorMessage}}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="errorMessage = null"></button>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="errorMessage = ''"></button>
     </div>
 
     <form (submit)="createNews($event)">
@@ -15,7 +15,7 @@
         <label class="form-label">Content <span [ngClass]="getCharsLeft() < 0 ? 'text-danger' : 'text-muted'">({{getCharsLeft()}})</span></label>
         <textarea name="content" class="form-control" required [(ngModel)]="content" placeholder="Enter some content"></textarea>
       </div>
-      <button class="btn w-100 btn-outline-primary" [disabled]="!canCreate">Create News</button>
+      <button class="btn w-100 btn-outline-primary" type="submit" [disabled]="!canCreate">Create News</button>
     </form>
 
   </div>
