--- a/todoapp-presentation/src/main/angular/src/app/app.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.html
@@ -3,17 +3,38 @@
   <!-- header -->
   <div class="p-3 mb-4 bg-light rounded-3">
     <div class="container-fluid">
-      <h3>Webtech 2 Examples</h3>
-      <p class="mb-0">Examples for the contents of the lecture.</p>
+      <h3>tuDo</h3>
+      <p class="mb-0">The future of ticket systems.</p>
     </div>
   </div>
 
   <!-- navigation tabs -->
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/auth" routerLinkActive="active">Auth</a>
-    </li>
-  </ul>
+  <div *ngIf="!isLoggedIn">
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+      </li>
+    </ul>
+  </div>
+  
+  <div *ngIf="isLoggedIn">
+    <div class="row">
+      <div class="col-12 text-right">
+        <button class="btn btn-sm btn-outline-secondary" (click)="logout()">Logout</button>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-4">
+        <h4 class="title">Hello I am logged in!</h4>
+        <hr>
+      </div>
+    </div>
+  </div>
+
   <!-- news area -->
   <div class="mt-4">
     <router-outlet></router-outlet>
