-added components "dashboard" and "profile" + routing

--- a/todoapp-presentation/src/main/angular/src/app/app.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.html
@@ -27,12 +27,14 @@
       </div>
     </div>
     <hr>
-    <div class="row">
-      <div class="col-4">
-        <h4 class="title">Hello I am logged in!</h4>
-        <hr>
-      </div>
-    </div>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
+      </li>
+    </ul>
   </div>
 
   <!-- news area -->
