-pimped dark mode -enabled nav bar buttons to dashboard and profile components for not-logged-in users (easier dev)

--- a/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<div class="card">
+    <h4 class="title">Dashboard</h4>
+    <hr>
+    <div class="card-body">
+        
+    </div>
+</div>
+  
