--- a/todoapp-presentation/src/main/angular/src/app/app.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.html
@@ -1,41 +1,30 @@
 <div class="container mt-4">
-
   <!-- header -->
-  <div class="p-3 mb-4 bg-light rounded-3">
-    <div class="container-fluid">
-      <h3>tuDo</h3>
-      <p class="mb-0">The future of ticket systems.</p>
-    </div>
+  <div class="container-fluid">
+    <h1>tuDo</h1>
+    <p class="mb-1">The future of ticket systems.</p>
   </div>
+  <hr>
 
   <!-- navigation tabs -->
-  <div *ngIf="!isLoggedIn">
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-      </li>
-      <li class="nav-item">
+  <ul class="nav nav-tabs">
+    <li class="nav-item" *ngIf="!isLoggedIn">
+      <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+        </li>
+      <li class="nav-item" *ngIf="!isLoggedIn">
         <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
       </li>
-    </ul>
-  </div>
-  
-  <div *ngIf="isLoggedIn">
-    <div class="row">
-      <div class="col-12 text-right">
-        <button class="btn btn-sm btn-outline-secondary" (click)="logout()">Logout</button>
-      </div>
-    </div>
-    <hr>
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!isLoggedIn">
         <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!isLoggedIn">
         <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
       </li>
     </ul>
+  <div class="col-12 text-right" *ngIf="!isLoggedIn">
+    <button class="btn btn-sm btn-outline-secondary " style="float: right;"(click)="logout()">Logout</button>
   </div>
+  <hr>
 
   <!-- news area -->
   <div class="mt-4">
