--- a/todoapp-presentation/src/main/angular/src/app/components/login/login.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/login/login.component.html
@@ -1,4 +1,6 @@
 <div class="card">
+  <h4 class="title">Login</h4>
+  <hr>
   <div class="card-body">
     <div class="alert alert-danger alert-dismissible" *ngIf="errorMessage !== ''">
       {{errorMessage}}
