--- a/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<div class="card">
+    <h4 class="title">Profile</h4>
+    <hr>
+    <div class="card-body">
+        
+    </div>
+</div>
+  
