--- a/todoapp-presentation/src/main/angular/src/app/components/register/register.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/register/register.component.html
@@ -1,4 +1,6 @@
 <div class="card">
+    <h4 class="title">Register</h4>
+    <hr>
     <div class="card-body">
         <div class="alert alert-danger alert-dismissible" *ngIf="errorMessage !== ''">
             {{errorMessage}}
