--- a/todoapp-presentation/src/main/angular/src/app/app.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.html
@@ -9,20 +9,20 @@
   <!-- navigation tabs -->
   <ul class="nav nav-tabs">
     <li class="nav-item" *ngIf="!isLoggedIn">
-      <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+      <a class="nav-link" id="loginNavBtn" routerLink="/login" routerLinkActive="active">Login</a>
         </li>
       <li class="nav-item" *ngIf="!isLoggedIn">
-        <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+        <a class="nav-link" id="registerNavBtn" routerLink="/register" routerLinkActive="active">Register</a>
       </li>
       <li class="nav-item" *ngIf="!isLoggedIn">
-        <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+        <a class="nav-link" id="dashboardNavBtn" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
       </li>
       <li class="nav-item" *ngIf="!isLoggedIn">
-        <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
+        <a class="nav-link" id="profileNavBtn" routerLink="/profile" routerLinkActive="active">Profile</a>
       </li>
     </ul>
   <div class="col-12 text-right" *ngIf="!isLoggedIn">
-    <button class="btn btn-sm btn-outline-secondary " style="float: right;"(click)="logout()">Logout</button>
+    <button class="btn btn-sm btn-outline-secondary" id="logoutBtn" style="float: right;"(click)="logout()">Logout</button>
   </div>
   <hr>
 
