--- a/todoapp-presentation/src/main/angular/src/app/app.component.sass
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.sass
@@ -1,18 +1,13 @@
 $bg-color: #333
 $text-color: #ccc
 
-div.container.mt-4
-  border-color: black
-
-nav.nav-tabs
-  border-color: black
 .nav-link
   background: $bg-color
   padding: .5rem .75rem
   border-radius: .25rem
   color: $text-color
   font-size: 1rem
-  border-color: black
+  border-color: white
 
 .nav-link.active
   background: lighten($bg-color, 40)
@@ -20,11 +15,11 @@ nav.nav-tabs
   border-radius: .25rem
   color: black
   font-size: 1rem
-  border-color: black
+  border-color: white
 
 #logoutBtn
   background: $bg-color
   padding: .5rem .75rem
   border-radius: .25rem
   color: $text-color
-  border-color: black
+  border-color: white
