-renamed attribute "created" to "registrationDate"

--- a/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
@@ -2,7 +2,8 @@
     <h4 class="title">Profile</h4>
     <hr>
     <div class="card-body">
-        
+        <p>Username: {{username}}</p>
+        <p>Date of Registration: {{registrationDate}}</p>
     </div>
 </div>
   
