--- a/todoapp-presentation/src/main/angular/src/app/components/login/login.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="card">
-  <h4 class="title">Login</h4>
   <hr>
+  <h4 class="title">Login</h4>
   <div class="card-body">
     <div class="alert alert-danger alert-dismissible" *ngIf="errorMessage !== ''">
       {{errorMessage}}
@@ -10,13 +10,13 @@
     <form (submit)="login($event)">
       <div class="mb-3">
         <label class="form-label">Username</label>
-        <input name="username" type="text" class="form-control" [(ngModel)]="username" required placeholder="Enter your username">
+        <input name="username" type="text" id="usernameInput" class="form-control" [(ngModel)]="username" required placeholder="Enter your username">
       </div>
       <div class="mb-3">
         <label class="form-label">Password</label>
-        <input name="password" type="password" class="form-control" [(ngModel)]="password" required placeholder="Enter your password">
+        <input name="password" type="password" id="pwdInput" class="form-control" [(ngModel)]="password" required placeholder="Enter your password">
       </div>
-      <button class="btn w-100 btn-outline-primary" type="submit" [disabled]="!canLogin">Login</button>
+      <button class="btn w-100 btn-outline-primary" id="submitBtn" type="submit" [disabled]="!canLogin">Login</button>
     </form>
   </div>
 </div>
