-added more ids and style

--- a/todoapp-presentation/src/main/angular/src/app/app.component.sass
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.sass
@@ -22,4 +22,4 @@ $text-color: #ccc
   padding: .5rem .75rem
   border-radius: .25rem
   color: $text-color
-  border-color: white
+  border-color: black
