-added components for creating todo item lists and a component to create a todo items (formular) -added component for a todo item list -dashboard will render todo item lists -todo item lists  will render the items they hold -alot more minor things

--- a/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.html
@@ -1,1 +1,15 @@
-<p>create-todo-item-list works!</p>
+<form (submit)="createTodoItemList($event)">
+    <div class="mb-3">
+        <label class="form-label">Title</label>
+        <input name="title" id="titleInput" class="form-control" type="text" required [(ngModel)]="todoItemList.title" placeholder="Enter a title">
+    </div>
+    <div class="mb-3">
+        <label class="form-label">Description</label>
+        <input name="description" id="descriptionInput" class="form-control" type="text" required [(ngModel)]="todoItemList.description" placeholder="Enter a description">
+    </div>
+    <div class="mb-3">
+        <label class="form-label">Deadline (TODO: use Datepicker)</label>
+        <input name="deadline" id="deadlineInput" class="form-control" type="text" required [(ngModel)]="todoItemList.deadLine" placeholder="Enter a deadline (TODO: use Datepicker)">
+    </div>
+    <button class="btn w-100 btn-outline-primary" id="submitBtn" type="submit">Create List</button>
+</form>
