--- a/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,14 @@
     <hr>
     <h4 class="title">Dashboard</h4>
     <div class="card-body">
-        
+        <button class="btn btn-sm btn-outline-secondary" id="addListBtn" (click)="addList($event)">Add list</button>
+        <div class="alert alert-info" *ngIf="todoItemLists.length === 0">No item lists available</div>
+        <div class="list-group" *ngIf="todoItemLists.length > 0">
+            <p>Lists:</p>
+            <div class="list-group-item d-flex" *ngFor="let itemList of todoItemLists; let i = index">
+                <wt2-todo-item-list [todoItemList]="itemList"></wt2-todo-item-list>
+            </div>
+        </div>
     </div>
 </div>
   
