--- a/todoapp-presentation/src/main/angular/src/app/components/todo-item-details/todo-item-details.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/todo-item-details/todo-item-details.component.html
@@ -1,1 +1,9 @@
-<p>todo-item-details works!</p>
+<div class="card">
+    <hr>
+    <h4 class="title">{{todoItem.title}}</h4>
+    <div class="card-body">
+        <p>Description: {{todoItem.description}}</p>
+        <p>Deadline: {{todoItem.deadLine}}</p>
+        <p>Last edited: {{todoItem.lastEdited}}</p>
+    </div>
+</div>
