--- a/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
@@ -6,18 +6,32 @@
         <p>Date of Registration: {{registrationDate}}</p>
         <p>Role: {{role}}</p>
     </div>
-    <div *ngIf="hasItemsAssigned">
+    <div>
         <hr>
         <h4 class="title" >Assigned items:</h4>
         <div class="card-body">
-            <p>nur sichtbar falls items zugewiesen sind</p>
+            <div class="alert alert-info" *ngIf="todoItems.length === 0">No items available</div>
+            <div class="list-group" *ngIf="todoItems.length > 0">
+                <p>Items:</p>
+                <div class="list-group-item d-flex" *ngFor="let todoItem of todoItems; let i = index">
+                    <p>Item Title: {{todoItem.title}}</p>
+                    <p>Item Deadline: {{todoItem.deadLine}}</p>
+                    <button class="btn btn-sm btn-outline-secondary" id="itemDetailsBtn" (click)="seeItemDetails($event,todoItem)">Item Details</button>
+                </div>
+            </div>
         </div>
     </div>
     <div *ngIf="isAdmin">
         <hr>
         <h4 class="title" >Admin Area</h4>
         <div class="card-body">
-            <p>nur sichtbar falls role admin</p>
+            <form (submit)="deleteUser($event)">
+                <div class="mb-3">
+                    <label class="form-label">Username</label>
+                    <input name="deleteUsername" id="deleteUsernameInput" class="form-control" type="text" required [(ngModel)]="deleteUsername" placeholder="Enter a username">
+                </div>
+                <button class="btn w-100 btn-outline-primary" id="submitBtn" type="submit">Delete User</button>
+            </form>
         </div>
     </div>
 </div>
