--- a/todoapp-presentation/src/main/angular/src/app/components/todo-item-list/todo-item-list.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/todo-item-list/todo-item-list.component.html
@@ -1,1 +1,16 @@
-<p>todo-item-list works!</p>
+<p>List Title: {{todoItemList.title}}</p>
+<p>List Description: {{todoItemList.description}}</p>
+<p>List Deadline: {{todoItemList.deadLine}}</p>
+<button class="btn btn-sm btn-outline-secondary" id="addItemBtn" (click)="addItem($event)">Add Item</button>
+<button class="btn btn-sm btn-outline-secondary" id="deleteListBtn" (click)="deleteList($event)">Delete List</button>
+<div class="alert alert-info" *ngIf="todoItemList.todoItems.length === 0">No items available</div>
+<div class="list-group" *ngIf="todoItemList.todoItems.length > 0">
+    <p>Items:</p>
+    <div class="list-group-item d-flex" *ngFor="let todoItem of todoItemList.todoItems; let i = index">
+        <p>Item Title: {{todoItem.title}}</p>
+        <p>Item Deadline: {{todoItem.deadLine}}</p>
+        <button class="btn btn-sm btn-outline-secondary" id="itemDetailsBtn" (click)="seeItemDetails($event,todoItem)">Item Details</button>
+        <button class="btn btn-sm btn-outline-secondary" id="deleteItemBtn" (click)="deleteItem($event,todoItem)">Delete Item</button>
+    </div>
+</div>
+  
