-added attrs. assignees and creator for todo-items and integrated into components create-todo-item etc -added item service, starting implementation -starting implementation of small dialgos for item creation and details-view on items

--- a/todoapp-presentation/src/main/angular/src/app/components/create-todo-item/create-todo-item.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/create-todo-item/create-todo-item.component.html
@@ -8,6 +8,10 @@
         <input name="description" id="descriptionInput" class="form-control" type="text" required [(ngModel)]="todoItem.description" placeholder="Enter a description">
     </div>
     <div class="mb-3">
+        <label class="form-label">Assignees (usernames seperated by ',') (TODO: make selection model with usernames from db)</label>
+        <input name="assignees" id="assigneesInput" class="form-control" type="text" required [(ngModel)]="usernames" placeholder="Enter usernames">
+    </div>
+    <div class="mb-3">
         <label class="form-label">Deadline (TODO: use Datepicker)</label>
         <input name="deadline" id="deadlineInput" class="form-control" type="text" required [(ngModel)]="todoItem.deadLine" placeholder="Enter a deadline (TODO: use Datepicker)">
     </div>
