-small updates on dashboard and services

--- a/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.sass
+++ b/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.sass
@@ -3,7 +3,7 @@ $text-color: #ccc
 
 #addListBtn
   background: $bg-color
-  padding: .5rem .75rem
+  padding: .2rem .6rem
   border-radius: .25rem
   color: $text-color
-  border-color: black
+  border-color: white
