--- a/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.html
@@ -1,4 +1,8 @@
 <form (submit)="createTodoItemList($event)">
+    <div class="alert alert-danger alert-dismissible" *ngIf="errorMessage !== ''">
+        {{errorMessage}}
+        <button type="button" id="closeAlertBtn" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="errorMessage = ''"></button>
+    </div>
     <div class="mb-3">
         <label class="form-label">Title</label>
         <input name="title" id="titleInput" class="form-control" type="text" required [(ngModel)]="todoItemList.title" placeholder="Enter a title">
@@ -8,8 +12,10 @@
         <input name="description" id="descriptionInput" class="form-control" type="text" required [(ngModel)]="todoItemList.description" placeholder="Enter a description">
     </div>
     <div class="mb-3">
-        <label class="form-label">Deadline (TODO: use Datepicker)</label>
-        <input name="deadline" id="deadlineInput" class="form-control" type="text" required [(ngModel)]="todoItemList.deadLine" placeholder="Enter a deadline (TODO: use Datepicker)">
+        <label class="form-label" for="deadLineInput" >Deadline</label>
+        <input name="deadLine" class="form-control" id="deadLineInput" class="form-control" type="date" required [(ngModel)]="todoItemList.deadLine">
     </div>
     <button class="btn w-100 btn-outline-primary" id="submitBtn" type="submit">Create List</button>
 </form>
+<hr>
+<button class="btn w-100 btn-outline-primary" (click)="closeDialog()" id="closeDialogBtn" type="button">Close</button>
