--- a/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.sass
+++ b/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.sass
@@ -7,3 +7,10 @@ $text-color: #ccc
   border-radius: .25rem
   color: $text-color
   border-color: black
+
+#closeDialogBtn
+  background: $bg-color
+  padding: .5rem .75rem
+  border-radius: .25rem
+  color: $text-color
+  border-color: black
