--- a/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/dashboard/dashboard.component.html
@@ -3,12 +3,20 @@
     <h4 class="title">Dashboard</h4>
     <div class="card-body">
         <button class="btn btn-sm btn-outline-secondary" id="addListBtn" (click)="addList($event)">Add list</button>
+        <div class="alert alert-danger alert-dismissible" *ngIf="errorMessage !== ''">
+            {{errorMessage}}
+            <button type="button" id="closeAlertBtn" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="errorMessage = ''"></button>
+        </div>
+        <div class="alert alert-success alert-dismissible" *ngIf="successMessage !== ''">
+            {{successMessage}}
+            <button type="button" id="closeAlertBtn_suc" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="successMessage = ''"></button>
+        </div>
         <hr>
         <div class="alert alert-info" *ngIf="todoItemLists.length === 0">No item lists available</div>
         <div class="list-group" *ngIf="todoItemLists.length > 0">
             <p>Lists:</p>
             <div class="list-group-item d-flex" *ngFor="let itemList of todoItemLists; let i = index">
-                <wt2-todo-item-list [todoItemList]="itemList"></wt2-todo-item-list>
+                <wt2-todo-item-list [todoItemList]="itemList" (listDeletedEvent)="onListDeleted($event)"></wt2-todo-item-list>
             </div>
         </div>
     </div>
