--- a/todoapp-presentation/src/main/angular/src/app/components/login/login.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/login/login.component.html
@@ -10,11 +10,11 @@
     <form (submit)="login($event)">
       <div class="mb-3">
         <label class="form-label">Username</label>
-        <input name="username" id="usernameInput" type="text" class="form-control" [(ngModel)]="username" required placeholder="Enter your username">
+        <input name="username" id="usernameInput" type="text" class="form-control" [(ngModel)]="userAccount.username" required placeholder="Enter your username">
       </div>
       <div class="mb-3">
         <label class="form-label">Password</label>
-        <input name="password" id="pwdInput" type="passwordInput" class="form-control" [(ngModel)]="password" required placeholder="Enter your password">
+        <input name="password" id="pwdInput" type="password" class="form-control" [(ngModel)]="userAccount.password" required placeholder="Enter your password">
       </div>
       <button class="btn w-100 btn-outline-primary" id="submitBtn" type="submit" [disabled]="!canLogin">Login</button>
     </form>
