--- a/todoapp-presentation/src/main/angular/src/app/components/register/register.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/register/register.component.html
@@ -14,11 +14,11 @@
         <form (submit)="createAccount($event)">
             <div class="mb-3">
                 <label class="form-label">Username</label>
-                <input name="username" id="usernameInput" class="form-control" type="text" required [(ngModel)]="username" placeholder="Enter a username">
+                <input name="username" id="usernameInput" class="form-control" type="text" required [(ngModel)]="newUserAccount.username" placeholder="Enter a username">
             </div>
             <div class="mb-3">
                 <label class="form-label">Password</label>
-                <input name="password" id="pwdInput" type="password" class="form-control" required [(ngModel)]="password" placeholder="Enter a password">
+                <input name="password" id="pwdInput" type="password" class="form-control" required [(ngModel)]="newUserAccount.password" placeholder="Enter a password">
             </div>
             <div class="mb-3">
                 <label class="form-label">Repeat password</label>
