--- a/todoapp-presentation/src/main/angular/src/app/components/todo-item-details/todo-item-details.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/todo-item-details/todo-item-details.component.html
@@ -6,9 +6,8 @@
         <p>Deadline: {{todoItem.deadLine}}</p>
         <p>Last edited: {{todoItem.lastEdited}}</p>
         <p>Creator: {{todoItem.creator}}</p>
-        <p>Assignees:</p>
-        <div class="list-group-item d-flex" *ngFor="let username of todoItem.assignees; let i = index">
-            <span>{{username}} </span>
-        </div>
+        <p>Assignee: <span>{{todoItem.assignee}}</span></p>
     </div>
+    <hr>
+    <button class="btn w-100 btn-outline-primary" (click)="closeDialog()" id="closeDialogBtn" type="button">Close</button>
 </div>
