-added navigation on login to /dashboard and on logout to /login -fix minor runtime errors -html stuff

--- a/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
@@ -22,12 +22,14 @@
         <div class="card-body">
             <div class="alert alert-info" *ngIf="todoItems.length === 0">No items available</div>
             <div class="list-group" *ngIf="todoItems.length > 0">
-                <p>Items:</p>
-                <div class="list-group-item d-flex" *ngFor="let todoItem of todoItems; let i = index">
-                    <p id="title">Item Title: {{todoItem.title}}</p>
-                    <p id="deadline">Item Deadline: {{todoItem.deadLine}}</p>
-                    <button class="btn btn-sm btn-outline-secondary" id="itemDetailsBtn" (click)="seeItemDetails($event,todoItem)">Item Details</button>
-                </div>
+                <p>Items:</p> 
+                <hr>
+                <table *ngFor="let todoItem of todoItems; let i = index">
+                    <tr><p id="title">Item Title: {{todoItem.title}}</p></tr>
+                    <tr><p id="deadline">Item Deadline: {{todoItem.deadLine}}</p></tr>
+                    <tr><button class="btn btn-sm btn-outline-secondary" id="itemDetailsBtn" (click)="seeItemDetails($event,todoItem)">Item Details</button></tr>
+                    <hr>
+                </table>
             </div>
         </div>
     </div>
