son bisschen Farbe in die Titelbar gebracht

--- a/todoapp-presentation/src/main/angular/src/app/app.component.sass
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.sass
@@ -9,6 +9,10 @@ $text-color: #ccc
   font-size: 1rem
   border-color: white
 
+h1
+  background: #83b818
+  display:inline
+
 .nav-link.active
   background: lighten($bg-color, 40)
   padding: .5rem .75rem
