-removed  files from example project -added mock data in /todo-app-business/.../StartupBean.java -2 accounts and an itemlist with 1 item -made UserRole String
--IMPORTANT TODO:
look into user roles offered by shiro (hint: see WT2Realm.java, and UserRest2.deleteUser (=>especially line 102 in UserRest2.java!!!))

--TODO:
-why does getAllItemLists after Login not work

--- a/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/profile/profile.component.html
@@ -9,7 +9,7 @@
         <div class="card-body">
             <p id="userName">Username: {{userAccount.username}}</p>
             <p id="registrationDate">Date of Registration: {{userAccount.registrationDate}}</p>
-            <p id="role">Role: {{userAccount.role}}</p>
+            <p id="userRole">Role: {{userAccount.userRole}}</p>
         </div>
     </div>
     <div id="assignedItemsArea">
