--- a/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/create-todo-item-list/create-todo-item-list.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="mb-3">
         <label class="form-label" for="deadLineInput" >Deadline</label>
-        <input name="deadLine" class="form-control" id="deadLineInput" class="form-control" type="date" required [(ngModel)]="todoItemList.deadLine">
+        <input name="deadLine" class="form-control" id="deadLineInput" class="form-control" type="date" required [(ngModel)]="deadLine">
     </div>
     <button class="btn w-100 btn-outline-primary" id="submitBtn" type="submit">Create List</button>
 </form>
