--- a/todoapp-presentation/src/main/angular/src/app/components/create-todo-item/create-todo-item.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components/create-todo-item/create-todo-item.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="mb-3">
         <label class="form-label" for="deadLineInput" >Deadline</label>
-        <input name="deadLine" class="form-control" id="deadLineInput" class="form-control" type="date" required [(ngModel)]="deadLine">
+        <input name="deadLine" class="form-control" id="deadLineInput" type="date" [value]="deadLine | date:'yyyy-MM-dd'"/>
     </div>
     <button class="btn w-100 btn-outline-primary" id="submitBtn" type="submit">Create Item</button>
     <hr>
